REFACTOR: 메인 클래스 분리,  주석 추가
- 객체가 여러개일 경우 싱글톤 문제로 인한 오작동을 대비하기 위해
필드 변수와 인스턴스 변수를 구분했습니다.

- Application 클래스를 여러개 실행할 경우 싱글톤 문제로 인한 오작동
가능성을 제거하기 위해 코드를 Game 클래스로 분리하고, 이를 객체로
사용하기로 했습니다.

- 설정값을 사용하는 클래스에서 필드 변수로 만들고 이를 활용함으로써
설정값의 변수명이 변경될 경우 최소한의 수정만으로 해결할 수 있도록
했으나, 사용하는 설정값이 많아질 경우 그에 따라 필드 변수가 많아지고,
코드를 보기 힘들질 것이라 생각했기 때문에 설정값 참조를 바로 사용하도록
수정했습니다.

- 로또 번호(숫자 리스트)를 정렬하는 역할은 Lotto 클래스에서 책임져야
한다고 생각했기 때문에 Lotto 클래스에 정렬 메서드를 추가했습니다.
또한, 테스트 케이스가 UnmodifiableList인 것을 고려하여, 새로운
리스트를 생성하여 정렬하도록 했습니다.

- 문자열에서 숫자리스트로 변환하는 과정을 좀더 보기 쉽게 하기 위해
1 줄 코드를 분리했습니다.

- 출력에 사용되는 객체는 해당 객체를 문자열로 만드는 메서드가 있어야
한다고 생각해 Lotto와 LottoBundle 객체에 toString 메서드를
작성했습니다.

- 설정값의 변수가 어떤 의미인지 바로 알아볼 수 있게 각 설정값마다
주석을 추가했습니다.

- 로또의 당첨 개수를 계산하는 메서드의 인자를 알아보기 쉽게하기 위해
Lotto 객체를 넘기도록 했습니다.